fixed navbar on mobile

--- a/src/components/SingleProject.css
+++ b/src/components/SingleProject.css
@@ -43,8 +43,6 @@
 .project-image {
   height: 80%;
   width: 85%;
-  background-color: pink;
-  border: 1px solid #deac70;
   /* box-shadow: 0px 0px 30px 10px rgba(222, 172, 112, 0.9); */
 }
 
