--- a/src/components/header.css
+++ b/src/components/header.css
@@ -65,7 +65,7 @@
 }
 
 .logo-side {
-  height: 100%;
+  height: 80px;
   width: 45%;
   display: flex;
   flex-direction: row;
@@ -108,7 +108,7 @@
   justify-content: center;
   justify-content: space-between;
   align-items: center;
-  height: 70%;
+  height: 210px;
   width: 100%;
   list-style-type: none;
 }
@@ -121,8 +121,9 @@
   align-items: center;
   margin: 10px;
   padding: 10px;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  /* background-color: red; */
 }
 
 .bar {
